{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 627,
  "lineage": "2e7a54cd-72de-c5b1-ebb4-32f7107729f2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:internet-gateway/igw-008088de67bb0bb0a",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-04ceed96ed33eb80a"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-04ceed96ed33eb80a"
                ]
              }
            ],
            "id": "igw-008088de67bb0bb0a",
            "internet_gateway_id": "igw-008088de67bb0bb0a",
            "owner_id": "585008045756",
            "tags": {
              "Environment": "prod",
              "Name": "agile-prod-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:route-table/rtb-0768e8943a7786aa6",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-02380e7c65e6be7cc",
                "route_table_id": "rtb-0768e8943a7786aa6",
                "subnet_id": "subnet-0521f8466a40b394c"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-01cc238715d3f6c5f",
                "route_table_id": "rtb-0768e8943a7786aa6",
                "subnet_id": "subnet-0197df41affb2d92d"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-06bd023df402665c7",
                "route_table_id": "rtb-0768e8943a7786aa6",
                "subnet_id": "subnet-03b10924d502d91b6"
              }
            ],
            "filter": [
              {
                "name": "route-table-id",
                "values": [
                  "rtb-0768e8943a7786aa6"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-0768e8943a7786aa6",
            "owner_id": "585008045756",
            "route_table_id": "rtb-0768e8943a7786aa6",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f70cb5b97ed02551",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Environment": "prod",
              "Name": "agile-prod-vpc-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:route-table/rtb-05e4595cb2358b2a7",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0cd574c76a2c47d54",
                "route_table_id": "rtb-05e4595cb2358b2a7",
                "subnet_id": "subnet-092e9fd61ec4c5af4"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0fbb097b90fe4241b",
                "route_table_id": "rtb-05e4595cb2358b2a7",
                "subnet_id": "subnet-0d04432ad172243bc"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-043c0bfddab05e7a4",
                "route_table_id": "rtb-05e4595cb2358b2a7",
                "subnet_id": "subnet-0e8eb16ae00c3b12a"
              }
            ],
            "filter": [
              {
                "name": "route-table-id",
                "values": [
                  "rtb-05e4595cb2358b2a7"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-05e4595cb2358b2a7",
            "owner_id": "585008045756",
            "route_table_id": "rtb-05e4595cb2358b2a7",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008088de67bb0bb0a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Environment": "prod",
              "Name": "agile-prod-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-0b2bc8f0fd3c28994",
            "description": "Security Group for the ALB",
            "filter": null,
            "id": "sg-0b2bc8f0fd3c28994",
            "name": "agaile-sg-alb-tf",
            "tags": {
              "Name": "agaile-sg-alb-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fcae467a4f3d877"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-004bc883b88f8e3df",
            "description": "Security group for Lambda functions",
            "filter": null,
            "id": "sg-004bc883b88f8e3df",
            "name": "lambda-prod-sg",
            "tags": {
              "Environment": "prod",
              "Name": "lambda-prod-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:subnet/subnet-03b10924d502d91b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "available_ip_address_count": 234,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b10924d502d91b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585008045756",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "Name": "agile-prod-vpc-private-eu-central-1a",
              "Terraform": "true",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04ceed96ed33eb80a"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:subnet/subnet-0521f8466a40b394c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "available_ip_address_count": 236,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0521f8466a40b394c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585008045756",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "Name": "agile-prod-vpc-private-eu-central-1b",
              "Terraform": "true",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04ceed96ed33eb80a"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:subnet/subnet-0197df41affb2d92d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "available_ip_address_count": 238,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0197df41affb2d92d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585008045756",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "Name": "agile-prod-vpc-private-eu-central-1c",
              "Terraform": "true",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04ceed96ed33eb80a"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:subnet/subnet-03b10924d502d91b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "available_ip_address_count": 234,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "*private*1a"
                ]
              }
            ],
            "id": "subnet-03b10924d502d91b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585008045756",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "Name": "agile-prod-vpc-private-eu-central-1a",
              "Terraform": "true",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04ceed96ed33eb80a"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:subnet/subnet-0521f8466a40b394c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "available_ip_address_count": 236,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "*private*1b"
                ]
              }
            ],
            "id": "subnet-0521f8466a40b394c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585008045756",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "Name": "agile-prod-vpc-private-eu-central-1b",
              "Terraform": "true",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04ceed96ed33eb80a"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:vpc/vpc-04ceed96ed33eb80a",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e0895d50d397a79e",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-05f3a6f19e8da5597",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ceed96ed33eb80a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e698154f7121ce54",
            "owner_id": "585008045756",
            "tags": {
              "Environment": "prod",
              "Name": "agile-prod-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "tenant",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:vpc/vpc-00fcae467a4f3d877",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-015e563a41e11621a",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-05f3a6f19e8da5597",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00fcae467a4f3d877",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09664e6b5aed6cf15",
            "owner_id": "585008045756",
            "tags": {
              "Name": "agaile-pvc-tf"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:eu-central-1:585008045756:transit-gateway/tgw-06f70755505b588f0",
            "association_default_route_table_id": "tgw-rtb-0512cf9fa23e99f4a",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Main Transit Gateway for VPC connectivity",
            "dns_support": "enable",
            "id": "tgw-06f70755505b588f0",
            "multicast_support": "disable",
            "owner_id": "585008045756",
            "propagation_default_route_table_id": "tgw-rtb-0512cf9fa23e99f4a",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "main-tgw-prod",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "main-tgw-prod",
              "Project": "CAP"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "to_core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.0.0.0/16",
            "id": "tgw-rtb-01de4f6de661c0c5c_10.0.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-0f462b6ee7dc544a6",
            "transit_gateway_route_table_id": "tgw-rtb-01de4f6de661c0c5c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_route_table.main",
            "aws_ec2_transit_gateway_vpc_attachment.core"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "to_tenant",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "172.16.0.0/16",
            "id": "tgw-rtb-01de4f6de661c0c5c_172.16.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-03218bafea6e4e0ad",
            "transit_gateway_route_table_id": "tgw-rtb-01de4f6de661c0c5c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_route_table.main",
            "aws_ec2_transit_gateway_vpc_attachment.tenant"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:transit-gateway-route-table/tgw-rtb-01de4f6de661c0c5c",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-01de4f6de661c0c5c",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "main-tgw-rt-prod",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "main-tgw-rt-prod",
              "Project": "CAP"
            },
            "transit_gateway_id": "tgw-06f70755505b588f0"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0f462b6ee7dc544a6",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0197df41affb2d92d",
              "subnet-03b10924d502d91b6",
              "subnet-0521f8466a40b394c"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "core-tgw-attachment-prod",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "core-tgw-attachment-prod",
              "Project": "CAP"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-06f70755505b588f0",
            "vpc_id": "vpc-04ceed96ed33eb80a",
            "vpc_owner_id": "585008045756"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tenant",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-03218bafea6e4e0ad",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-06eef1b4f27e100b3",
              "subnet-08cdc3f87f4376573",
              "subnet-0f4a456d9425f5a93"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "tenant-tgw-attachment-prod",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "tenant-tgw-attachment-prod",
              "Project": "CAP"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-06f70755505b588f0",
            "vpc_id": "vpc-00fcae467a4f3d877",
            "vpc_owner_id": "585008045756"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca50f9d8d19bf076",
            "arn": "arn:aws:ec2:eu-central-1:585008045756:instance/i-079d1210c24888a0d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bastion-ssm-profile",
            "id": "i-079d1210c24888a0d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "agaile-prod-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-008de954b158d8689",
            "private_dns": "ip-10-0-1-127.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-central-1:585008045756:key/6055483a-6f51-479d-83e7-861f7f4d97e9",
                "throughput": 125,
                "volume_id": "vol-0b083462934c1c579",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b10924d502d91b6",
            "tags": {
              "Name": "bastion-host-ng",
              "Tenant": "agaile-shared-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "bastion-host-ng",
              "Project": "CAP",
              "Tenant": "agaile-shared-prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-009581a9868fbc17e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.bastion_profile",
            "aws_iam_role.bastion_ssm_role",
            "aws_key_pair.bastion_key",
            "aws_security_group.bastion",
            "aws_security_group.vpce",
            "data.aws_ami.amazonlinux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "agaile-alb-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/agaile-alb-tf/88d4ef46cae3dc8c",
            "arn_suffix": "app/agaile-alb-tf/88d4ef46cae3dc8c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "agaile-alb-tf-722615250.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/agaile-alb-tf/88d4ef46cae3dc8c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "agaile-alb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ccf9c6bead539614"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-092e9fd61ec4c5af4"
              },
              {
                "subnet_id": "subnet-0d04432ad172243bc"
              },
              {
                "subnet_id": "subnet-0e8eb16ae00c3b12a"
              }
            ],
            "subnets": [
              "subnet-092e9fd61ec4c5af4",
              "subnet-0d04432ad172243bc",
              "subnet-0e8eb16ae00c3b12a"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "vpc_id": "vpc-04ceed96ed33eb80a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.agaile_alb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "convert10-alb-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/convert10-alb-tf/7609f1f544e562d1",
            "arn_suffix": "app/convert10-alb-tf/7609f1f544e562d1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "convert10-alb-tf-44610545.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/convert10-alb-tf/7609f1f544e562d1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "convert10-alb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0156422f2e6eb18b5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-092e9fd61ec4c5af4"
              },
              {
                "subnet_id": "subnet-0d04432ad172243bc"
              },
              {
                "subnet_id": "subnet-0e8eb16ae00c3b12a"
              }
            ],
            "subnets": [
              "subnet-092e9fd61ec4c5af4",
              "subnet-0d04432ad172243bc",
              "subnet-0e8eb16ae00c3b12a"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "vpc_id": "vpc-04ceed96ed33eb80a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.convert10_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "rooftopsolar-alb-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/rooftopsolar-alb-tf/15640b89ec2b8ef4",
            "arn_suffix": "app/rooftopsolar-alb-tf/15640b89ec2b8ef4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "rooftopsolar-alb-tf-521028936.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/rooftopsolar-alb-tf/15640b89ec2b8ef4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rooftopsolar-alb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a09312f5f8b07ad5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-092e9fd61ec4c5af4"
              },
              {
                "subnet_id": "subnet-0d04432ad172243bc"
              },
              {
                "subnet_id": "subnet-0e8eb16ae00c3b12a"
              }
            ],
            "subnets": [
              "subnet-092e9fd61ec4c5af4",
              "subnet-0d04432ad172243bc",
              "subnet-0e8eb16ae00c3b12a"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "vpc_id": "vpc-04ceed96ed33eb80a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.rooftopsolar_alb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "rooftopsolar_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/rooftopsolar-alb-tf/15640b89ec2b8ef4",
            "arn_suffix": "app/rooftopsolar-alb-tf/15640b89ec2b8ef4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "rooftopsolar-alb-tf-521028936.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/rooftopsolar-alb-tf/15640b89ec2b8ef4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rooftopsolar-alb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-008eceb1f3ac91ba8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-092e9fd61ec4c5af4"
              },
              {
                "subnet_id": "subnet-0d04432ad172243bc"
              },
              {
                "subnet_id": "subnet-0e8eb16ae00c3b12a"
              }
            ],
            "subnets": [
              "subnet-092e9fd61ec4c5af4",
              "subnet-0d04432ad172243bc",
              "subnet-0e8eb16ae00c3b12a"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "rooftopsolar-alb-tf",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "rooftopsolar-alb-tf",
              "Project": "CAP"
            },
            "vpc_id": "vpc-04ceed96ed33eb80a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "widget_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/widget-prod/24db1aad437c62be",
            "arn_suffix": "app/widget-prod/24db1aad437c62be",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "widget-prod-1264566936.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/widget-prod/24db1aad437c62be",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "widget-prod",
            "preserve_host_header": false,
            "security_groups": [
              "sg-008eceb1f3ac91ba8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-092e9fd61ec4c5af4"
              },
              {
                "subnet_id": "subnet-0d04432ad172243bc"
              },
              {
                "subnet_id": "subnet-0e8eb16ae00c3b12a"
              }
            ],
            "subnets": [
              "subnet-092e9fd61ec4c5af4",
              "subnet-0d04432ad172243bc",
              "subnet-0e8eb16ae00c3b12a"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "widget-prod-alb",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "widget-prod-alb",
              "Project": "CAP"
            },
            "vpc_id": "vpc-04ceed96ed33eb80a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "zohlar_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/zohlar-alb-tf/b4724cdc4089bd3c",
            "arn_suffix": "app/zohlar-alb-tf/b4724cdc4089bd3c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "zohlar-alb-tf-47858471.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/zohlar-alb-tf/b4724cdc4089bd3c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "zohlar-alb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01147a81af341107f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-092e9fd61ec4c5af4"
              },
              {
                "subnet_id": "subnet-0d04432ad172243bc"
              },
              {
                "subnet_id": "subnet-0e8eb16ae00c3b12a"
              }
            ],
            "subnets": [
              "subnet-092e9fd61ec4c5af4",
              "subnet-0d04432ad172243bc",
              "subnet-0e8eb16ae00c3b12a"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "vpc_id": "vpc-04ceed96ed33eb80a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.zohlar_alb",
            "aws_subnet.tenant_new_public",
            "aws_vpc.tenant_new",
            "data.aws_subnets.zohlar_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "agaile_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/agaile-alb-tf/88d4ef46cae3dc8c/ead6ec46bf983c13",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/agaile-alb-tf/88d4ef46cae3dc8c/ead6ec46bf983c13",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/agaile-alb-tf/88d4ef46cae3dc8c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.agaile-alb-tf",
            "aws_security_group.agaile_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "agaile_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/agaile-alb-tf/88d4ef46cae3dc8c/57b8cf96f8ff191b",
            "certificate_arn": "arn:aws:acm:eu-central-1:585008045756:certificate/4f61e572-4942-4f60-8415-3e69ae1d0057",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:targetgroup/agaile-alb-tg-tf/d3246464f4c55b6b",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/agaile-alb-tf/88d4ef46cae3dc8c/57b8cf96f8ff191b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/agaile-alb-tf/88d4ef46cae3dc8c",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.agaile-alb-tf",
            "aws_lb_target_group.agaile-alb-tg-tf",
            "aws_security_group.agaile_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "convert10_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/convert10-alb-tf/7609f1f544e562d1/a3e1c9ee81584205",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/convert10-alb-tf/7609f1f544e562d1/a3e1c9ee81584205",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/convert10-alb-tf/7609f1f544e562d1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.convert10-alb-tf",
            "aws_security_group.convert10_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "convert10_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/convert10-alb-tf/7609f1f544e562d1/c7c78e6d03157347",
            "certificate_arn": "arn:aws:acm:eu-central-1:585008045756:certificate/4f61e572-4942-4f60-8415-3e69ae1d0057",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:targetgroup/convert10-alb-tg-tf/49acf63b9c8129df",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/convert10-alb-tf/7609f1f544e562d1/c7c78e6d03157347",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/convert10-alb-tf/7609f1f544e562d1",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.convert10-alb-tf",
            "aws_lb_target_group.convert10-alb-tg-tf",
            "aws_security_group.convert10_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rooftopsolar_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/rooftopsolar-alb-tf/15640b89ec2b8ef4/2dc8c5cd32b684a0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/rooftopsolar-alb-tf/15640b89ec2b8ef4/2dc8c5cd32b684a0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/rooftopsolar-alb-tf/15640b89ec2b8ef4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.rooftopsolar-alb-tf",
            "aws_security_group.rooftopsolar_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rooftopsolar_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/rooftopsolar-alb-tf/15640b89ec2b8ef4/c321df024826b8da",
            "certificate_arn": "arn:aws:acm:eu-central-1:585008045756:certificate/4f61e572-4942-4f60-8415-3e69ae1d0057",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:targetgroup/rooftopsolar-alb-tg-tf/55ffb3cea5cf1576",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/rooftopsolar-alb-tf/15640b89ec2b8ef4/c321df024826b8da",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/rooftopsolar-alb-tf/15640b89ec2b8ef4",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.rooftopsolar-alb-tf",
            "aws_lb_target_group.rooftopsolar-alb-tg-tf",
            "aws_security_group.rooftopsolar_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "zohlar_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/zohlar-alb-tf/b4724cdc4089bd3c/b861b65fde07c39b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/zohlar-alb-tf/b4724cdc4089bd3c/b861b65fde07c39b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/zohlar-alb-tf/b4724cdc4089bd3c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.zohlar_alb",
            "data.aws_subnets.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "zohlar_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/zohlar-alb-tf/b4724cdc4089bd3c/0e7e5db74380ec47",
            "certificate_arn": "arn:aws:acm:eu-central-1:585008045756:certificate/4f61e572-4942-4f60-8415-3e69ae1d0057",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:targetgroup/zohlar-alb-tg-tf/e9b10157ae2f7fac",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:listener/app/zohlar-alb-tf/b4724cdc4089bd3c/0e7e5db74380ec47",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/zohlar-alb-tf/b4724cdc4089bd3c",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.zohlar_alb",
            "aws_lb_target_group.zohlar-alb-tg-tf",
            "aws_security_group.zohlar_alb",
            "aws_subnet.tenant_new_public",
            "aws_vpc.tenant_new",
            "data.aws_subnets.zohlar_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "agaile-alb-tg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:targetgroup/agaile-alb-tg-tf/d3246464f4c55b6b",
            "arn_suffix": "targetgroup/agaile-alb-tg-tf/d3246464f4c55b6b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:targetgroup/agaile-alb-tg-tf/d3246464f4c55b6b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/agaile-alb-tf/88d4ef46cae3dc8c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "agaile-alb-tg-tf",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04ceed96ed33eb80a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "convert10-alb-tg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:targetgroup/convert10-alb-tg-tf/49acf63b9c8129df",
            "arn_suffix": "targetgroup/convert10-alb-tg-tf/49acf63b9c8129df",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:targetgroup/convert10-alb-tg-tf/49acf63b9c8129df",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/convert10-alb-tf/7609f1f544e562d1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "convert10-alb-tg-tf",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04ceed96ed33eb80a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rooftopsolar-alb-tg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:targetgroup/rooftopsolar-alb-tg-tf/55ffb3cea5cf1576",
            "arn_suffix": "targetgroup/rooftopsolar-alb-tg-tf/55ffb3cea5cf1576",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:targetgroup/rooftopsolar-alb-tg-tf/55ffb3cea5cf1576",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/rooftopsolar-alb-tf/15640b89ec2b8ef4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rooftopsolar-alb-tg-tf",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "rooftopsolar-alb-tg-tf",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "rooftopsolar-alb-tg-tf",
              "Project": "CAP"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04ceed96ed33eb80a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "zohlar-alb-tg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:targetgroup/zohlar-alb-tg-tf/e9b10157ae2f7fac",
            "arn_suffix": "targetgroup/zohlar-alb-tg-tf/e9b10157ae2f7fac",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:585008045756:targetgroup/zohlar-alb-tg-tf/e9b10157ae2f7fac",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:585008045756:loadbalancer/app/zohlar-alb-tf/b4724cdc4089bd3c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "zohlar-alb-tg-tf",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zohlar-alb-tg-tf",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zohlar-alb-tg-tf",
              "Project": "CAP"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "dependencies": [
            "aws_subnet.tenant_new_public",
            "aws_vpc.tenant_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tenant_to_core_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-08534ce96b970dddb",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08534ce96b970dddb3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08534ce96b970dddb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-06f70755505b588f0",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "data.aws_route_tables.tenant_all"
          ]
        },
        {
          "index_key": "rtb-09664e6b5aed6cf15",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09664e6b5aed6cf153322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09664e6b5aed6cf15",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-06f70755505b588f0",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "data.aws_route_tables.tenant_all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "agaile_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-0ccf9c6bead539614",
            "description": "Security group for Agaile ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccf9c6bead539614",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "agaile-alb-20250119183446987100000002",
            "name_prefix": "agaile-alb-",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "agaile-alb-sg",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "agaile-alb-sg",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "agaile_ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-0fc69c563bbf289d8",
            "description": "Security group for Agaile ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc69c563bbf289d8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound and health checks from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ccf9c6bead539614"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "agaile-ecs-tasks-20250119213047745300000001",
            "name_prefix": "agaile-ecs-tasks-",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "agaile-ecs-tasks-sg",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "agaile-ecs-tasks-sg",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.agaile_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-008eceb1f3ac91ba8",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008eceb1f3ac91ba8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "widget-prod-alb-20250119121641659800000006",
            "name_prefix": "widget-prod-alb-",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "widget-prod-alb",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "widget-prod-alb",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-0674c99eb6fee5b54",
            "description": "Security group for Aurora cluster",
            "egress": [],
            "id": "sg-0674c99eb6fee5b54",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "172.16.0.0/16"
                ],
                "description": "PostgreSQL from VPCs",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "aurora-prod",
            "name_prefix": "",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "aurora-prod",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "aurora-prod",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-079087c133832d9bf",
            "description": "Security group for Aurora cluster",
            "egress": [],
            "id": "sg-079087c133832d9bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "aurora-shared-prod",
            "name_prefix": "",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "widget-prod-aurora",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "widget-prod-aurora",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        },
        {
          "deposed": "1203e593",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-0084c7f319ae3f5af",
            "description": "Security group for Aurora cluster",
            "egress": [],
            "id": "sg-0084c7f319ae3f5af",
            "ingress": [],
            "name": "widget-prod-aurora-20250119100946791300000004",
            "name_prefix": "widget-prod-aurora-",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "widget-prod-aurora",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "widget-prod-aurora",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fcae467a4f3d877"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_vpc.existing"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "f6342958",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-028b4f88a7d6c4eb7",
            "description": "Security group for Aurora cluster",
            "egress": [],
            "id": "sg-028b4f88a7d6c4eb7",
            "ingress": [],
            "name": "widget-prod-aurora-20250104153435707000000001",
            "name_prefix": "widget-prod-aurora-",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "widget-prod-aurora",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "widget-prod-aurora",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.existing",
            "module.vpc.data.aws_vpc.existing"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-009581a9868fbc17e",
            "description": "Consolidated security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009581a9868fbc17e",
            "ingress": [
              {
                "cidr_blocks": [
                  "176.198.145.140/32",
                  "10.10.0.0/16"
                ],
                "description": "PostgreSQL ingress for pgAdmin",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from SSM VPC Endpoint",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-028aeb160aa580052"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH for SSM tunnel",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-028aeb160aa580052"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-host-consolidated",
            "name_prefix": "",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Managed_by": "terraform",
              "Name": "bastion-host-consolidated",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Managed_by": "terraform",
              "Name": "bastion-host-consolidated",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_ng_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-08977c5377c40bd5b",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08977c5377c40bd5b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from SSM VPC Endpoint",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-028aeb160aa580052"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH for SSM tunnel",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-028aeb160aa580052"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-host-ng-sg",
            "name_prefix": "",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "bastion-host-ng-sg",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "bastion-host-ng-sg",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "convert10_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-0156422f2e6eb18b5",
            "description": "Security group for Convert10 ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0156422f2e6eb18b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "convert10-alb-20250119221608847900000001",
            "name_prefix": "convert10-alb-",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "convert10-alb-sg",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "convert10-alb-sg",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "convert10_ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-0ab7fff8e306fe5a5",
            "description": "Security group for Convert10 ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab7fff8e306fe5a5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound and health checks from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0156422f2e6eb18b5"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "convert10-ecs-tasks-20250119221610614200000002",
            "name_prefix": "convert10-ecs-tasks-",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "convert10-ecs-tasks-sg",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "convert10-ecs-tasks-sg",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.convert10_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "Allow inbound traffic for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d09faa231b363be4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b2bc8f0fd3c28994"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs-tasks-sg",
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eic_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-03d7dda1195b5f483",
            "description": "Security group for EIC endpoint",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "SSH to bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-009581a9868fbc17e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-03d7dda1195b5f483",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTPS from bastion",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eic-endpoint-sg",
            "name_prefix": "",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-eic-endpoint",
              "Tenant": "agaile-shared-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "prod-eic-endpoint",
              "Project": "CAP",
              "Tenant": "agaile-shared-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-04871d0b05ab55be5",
            "description": "Security group for Lambda functions",
            "egress": [],
            "id": "sg-04871d0b05ab55be5",
            "ingress": [],
            "name": "widget-prod-lambda-20250119121617621500000001",
            "name_prefix": "widget-prod-lambda-",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-04dfa66b0e403d3ae",
            "description": "Security group for RDS Proxy",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04dfa66b0e403d3ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-proxy-prod",
            "name_prefix": "",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "rds-proxy-prod",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "rds-proxy-prod",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rooftopsolar_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-0a09312f5f8b07ad5",
            "description": "Security group for RooftopSolar ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a09312f5f8b07ad5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "rooftopsolar-alb-20250119220230635600000001",
            "name_prefix": "rooftopsolar-alb-",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "rooftopsolar-alb-sg",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "rooftopsolar-alb-sg",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rooftopsolar_ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-01a8097b70b724193",
            "description": "Security group for RooftopSolar ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a8097b70b724193",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound and health checks from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a09312f5f8b07ad5"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "rooftopsolar-ecs-tasks-20250119220232273700000002",
            "name_prefix": "rooftopsolar-ecs-tasks-",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "rooftopsolar-ecs-tasks-sg",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "rooftopsolar-ecs-tasks-sg",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rooftopsolar_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-028aeb160aa580052",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028aeb160aa580052",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTPS from core VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpce-prod",
            "name_prefix": "",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "vpce-prod",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "vpce-prod",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zohlar_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-01147a81af341107f",
            "description": "Security group for Zohlar ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01147a81af341107f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "zohlar-alb-20250119183446813600000001",
            "name_prefix": "zohlar-alb-",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zohlar-alb-sg",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zohlar-alb-sg",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.tenant_new_public",
            "aws_vpc.tenant_new"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zohlar_ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-09591af33b0cdea5f",
            "description": "Security group for Zohlar ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09591af33b0cdea5f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound and health checks from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01147a81af341107f"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "zohlar-ecs-tasks-20250119214946104100000001",
            "name_prefix": "zohlar-ecs-tasks-",
            "owner_id": "585008045756",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zohlar-ecs-tasks-sg",
              "Project": "CAP"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zohlar-ecs-tasks-sg",
              "Project": "CAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.zohlar_alb",
            "aws_subnet.tenant_new_public",
            "aws_vpc.tenant_new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aurora_ingress_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow PostgreSQL from RDS Proxy",
            "from_port": 5432,
            "id": "sgrule-2404251302",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0674c99eb6fee5b54",
            "security_group_rule_id": "sgr-0a810013821dd0a35",
            "self": false,
            "source_security_group_id": "sg-04dfa66b0e403d3ae",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aurora",
            "aws_security_group.rds_proxy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_proxy_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-3698380456",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04dfa66b0e403d3ae",
            "security_group_rule_id": "sgr-0e5e2c0daff90002c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds_proxy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_proxy_egress_aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow PostgreSQL to Aurora",
            "from_port": 5432,
            "id": "sgrule-4274114324",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04dfa66b0e403d3ae",
            "security_group_rule_id": "sgr-0df05050ff950a054",
            "self": false,
            "source_security_group_id": "sg-0674c99eb6fee5b54",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aurora",
            "aws_security_group.rds_proxy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tenant_to_core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow traffic to core VPC",
            "from_port": 0,
            "id": "sgrule-3469821103",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-008eceb1f3ac91ba8",
            "security_group_rule_id": "sgr-054942af2f45e254d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tenant_new_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:subnet/subnet-0d5d4058e1666af96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5d4058e1666af96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585008045756",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "tenant-public-0-prod",
              "Project": "CAP",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "tenant-public-0-prod",
              "Project": "CAP",
              "Type": "public"
            },
            "vpc_id": "vpc-060c95fd47920a4d2"
          },
          "dependencies": [
            "aws_vpc.tenant_new"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:subnet/subnet-0d4698641acfa6129",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4698641acfa6129",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585008045756",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "tenant-public-1-prod",
              "Project": "CAP",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "tenant-public-1-prod",
              "Project": "CAP",
              "Type": "public"
            },
            "vpc_id": "vpc-060c95fd47920a4d2"
          },
          "dependencies": [
            "aws_vpc.tenant_new"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:subnet/subnet-04bc4e13bebad4eb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bc4e13bebad4eb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "585008045756",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "tenant-public-2-prod",
              "Project": "CAP",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "tenant-public-2-prod",
              "Project": "CAP",
              "Type": "public"
            },
            "vpc_id": "vpc-060c95fd47920a4d2"
          },
          "dependencies": [
            "aws_vpc.tenant_new"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tenant_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:vpc/vpc-060c95fd47920a4d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0774c0e23ba7178af",
            "default_route_table_id": "rtb-01e5d6596b0edd203",
            "default_security_group_id": "sg-095fe701cf5a253e3",
            "dhcp_options_id": "dopt-05f3a6f19e8da5597",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-060c95fd47920a4d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e5d6596b0edd203",
            "owner_id": "585008045756",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "tenant-vpc-new-prod",
              "Project": "CAP",
              "Type": "tenant"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "tenant-vpc-new-prod",
              "Project": "CAP",
              "Type": "tenant"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:vpc-endpoint/vpce-08f880dee9b0dfb0a",
            "dns_entry": [
              {
                "dns_name": "vpce-08f880dee9b0dfb0a-sz83pl2d.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-08f880dee9b0dfb0a-sz83pl2d-eu-central-1c.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-08f880dee9b0dfb0a-sz83pl2d-eu-central-1a.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-08f880dee9b0dfb0a-sz83pl2d-eu-central-1b.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ec2messages.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0019048KRGL94309ZB5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08f880dee9b0dfb0a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0137f5df487afe3fc",
              "eni-05c398d178911ae23",
              "eni-0fb2fae8bfe16765f"
            ],
            "owner_id": "585008045756",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-028aeb160aa580052"
            ],
            "service_name": "com.amazonaws.eu-central-1.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-0197df41affb2d92d",
              "subnet-03b10924d502d91b6",
              "subnet-0521f8466a40b394c"
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "dependencies": [
            "aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:vpc-endpoint/vpce-0ff1d60e54d54ebc0",
            "dns_entry": [
              {
                "dns_name": "vpce-0ff1d60e54d54ebc0-lzev8ype.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0ff1d60e54d54ebc0-lzev8ype-eu-central-1a.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0ff1d60e54d54ebc0-lzev8ype-eu-central-1b.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0ff1d60e54d54ebc0-lzev8ype-eu-central-1c.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "api.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z03404852QM6YEQZ35HAU"
              },
              {
                "dns_name": "ecr.eu-central-1.api.aws",
                "hosted_zone_id": "Z04670472EXH9NDN4CPMS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ff1d60e54d54ebc0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03f8edca5028a926d",
              "eni-098941b3188fb3df4",
              "eni-0c643895f4c780fff"
            ],
            "owner_id": "585008045756",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-028aeb160aa580052"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0197df41affb2d92d",
              "subnet-03b10924d502d91b6",
              "subnet-0521f8466a40b394c"
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "dependencies": [
            "aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:vpc-endpoint/vpce-04ddbb6eadf9114b8",
            "dns_entry": [
              {
                "dns_name": "vpce-04ddbb6eadf9114b8-ajpyql6e.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-04ddbb6eadf9114b8-ajpyql6e-eu-central-1c.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-04ddbb6eadf9114b8-ajpyql6e-eu-central-1b.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-04ddbb6eadf9114b8-ajpyql6e-eu-central-1a.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "dkr.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z00202003BQ4YMP6GMUT7"
              },
              {
                "dns_name": "*.dkr.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z00202003BQ4YMP6GMUT7"
              },
              {
                "dns_name": "dkr-ecr.eu-central-1.on.aws",
                "hosted_zone_id": "Z00193262QTRJH5EZBOFE"
              },
              {
                "dns_name": "*.dkr-ecr.eu-central-1.on.aws",
                "hosted_zone_id": "Z00193262QTRJH5EZBOFE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04ddbb6eadf9114b8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0731993db78190ce3",
              "eni-088ae2f8af000b8d1",
              "eni-09c28fb16f976d76d"
            ],
            "owner_id": "585008045756",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-028aeb160aa580052"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0197df41affb2d92d",
              "subnet-03b10924d502d91b6",
              "subnet-0521f8466a40b394c"
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "dependencies": [
            "aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:vpc-endpoint/vpce-08a974075a99f9cdc",
            "dns_entry": [
              {
                "dns_name": "vpce-08a974075a99f9cdc-dxko99uf.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-08a974075a99f9cdc-dxko99uf-eu-central-1a.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-08a974075a99f9cdc-dxko99uf-eu-central-1c.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-08a974075a99f9cdc-dxko99uf-eu-central-1b.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "kms.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z03423103F7NFK1S2VJ64"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08a974075a99f9cdc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-046f650a28326142a",
              "eni-0807cb3cd9cb7a295",
              "eni-0fff2fbd803817757"
            ],
            "owner_id": "585008045756",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-028aeb160aa580052"
            ],
            "service_name": "com.amazonaws.eu-central-1.kms",
            "state": "available",
            "subnet_ids": [
              "subnet-0197df41affb2d92d",
              "subnet-03b10924d502d91b6",
              "subnet-0521f8466a40b394c"
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "dependencies": [
            "aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:vpc-endpoint/vpce-02b59413b7212d3d9",
            "dns_entry": [
              {
                "dns_name": "vpce-02b59413b7212d3d9-h9ayuonf.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-02b59413b7212d3d9-h9ayuonf-eu-central-1b.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-02b59413b7212d3d9-h9ayuonf-eu-central-1a.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-02b59413b7212d3d9-h9ayuonf-eu-central-1c.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "logs.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z00187533W0XQF9CUGEDZ"
              },
              {
                "dns_name": "logs.eu-central-1.api.aws",
                "hosted_zone_id": "Z0303008C7OTVWG7X2K0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02b59413b7212d3d9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0711575746a67ef64",
              "eni-0bebdc81a7d38a22c",
              "eni-0cc188d1930018836"
            ],
            "owner_id": "585008045756",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-028aeb160aa580052"
            ],
            "service_name": "com.amazonaws.eu-central-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-0197df41affb2d92d",
              "subnet-03b10924d502d91b6",
              "subnet-0521f8466a40b394c"
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "dependencies": [
            "aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:vpc-endpoint/vpce-0a5d953eb97c21dfa",
            "dns_entry": [
              {
                "dns_name": "vpce-0a5d953eb97c21dfa-15n5h0ya.rds.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0a5d953eb97c21dfa-15n5h0ya-eu-central-1b.rds.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0a5d953eb97c21dfa-15n5h0ya-eu-central-1c.rds.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0a5d953eb97c21dfa-15n5h0ya-eu-central-1a.rds.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "rds.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z03414093SNOH4HLUNZB2"
              },
              {
                "dns_name": "rds.eu-central-1.api.aws",
                "hosted_zone_id": "Z00199853D0Y0RV8OVNDB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a5d953eb97c21dfa",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-077d85fbfe2c2877f",
              "eni-0974b3848867afe7c",
              "eni-0b16a086c14c74f2e"
            ],
            "owner_id": "585008045756",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-028aeb160aa580052"
            ],
            "service_name": "com.amazonaws.eu-central-1.rds",
            "state": "available",
            "subnet_ids": [
              "subnet-0197df41affb2d92d",
              "subnet-03b10924d502d91b6",
              "subnet-0521f8466a40b394c"
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "dependencies": [
            "aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:vpc-endpoint/vpce-06368aca637dbe664",
            "cidr_blocks": [
              "52.219.44.0/22",
              "52.219.208.0/22",
              "3.5.136.0/22",
              "52.219.218.0/24",
              "52.219.140.0/24",
              "16.12.32.0/22",
              "52.219.72.0/22",
              "3.5.134.0/23",
              "16.12.24.0/21",
              "52.219.168.0/22"
            ],
            "id": "vpce-06368aca637dbe664",
            "owner_id": "585008045756",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ea54007",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "tgw-rtb-01de4f6de661c0c5c"
            ],
            "service_name": "com.amazonaws.eu-central-1.s3",
            "state": "available",
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_ec2_transit_gateway_route_table.main",
            "data.aws_route_tables.core_private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:vpc-endpoint/vpce-09aa4675e738c140f",
            "dns_entry": [
              {
                "dns_name": "vpce-09aa4675e738c140f-joifi6c1.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-09aa4675e738c140f-joifi6c1-eu-central-1a.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-09aa4675e738c140f-joifi6c1-eu-central-1b.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-09aa4675e738c140f-joifi6c1-eu-central-1c.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "secretsmanager.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0297581189CKI1AYOWKB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09aa4675e738c140f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03ae8dc3d2fabacc9",
              "eni-075d8e65648d89c7f",
              "eni-0a9c8010c7c0a8e0c"
            ],
            "owner_id": "585008045756",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-028aeb160aa580052"
            ],
            "service_name": "com.amazonaws.eu-central-1.secretsmanager",
            "state": "available",
            "subnet_ids": [
              "subnet-0197df41affb2d92d",
              "subnet-03b10924d502d91b6",
              "subnet-0521f8466a40b394c"
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "dependencies": [
            "aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:vpc-endpoint/vpce-03b79c0fda6c9edb8",
            "dns_entry": [
              {
                "dns_name": "vpce-03b79c0fda6c9edb8-5q1o1907.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-03b79c0fda6c9edb8-5q1o1907-eu-central-1b.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-03b79c0fda6c9edb8-5q1o1907-eu-central-1a.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-03b79c0fda6c9edb8-5q1o1907-eu-central-1c.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssm.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0295742TAE9HHYG0Q89"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03b79c0fda6c9edb8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03b83a66388e92754",
              "eni-0630591d7f7efc514",
              "eni-0c64acdc24668cad9"
            ],
            "owner_id": "585008045756",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-028aeb160aa580052"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-0197df41affb2d92d",
              "subnet-03b10924d502d91b6",
              "subnet-0521f8466a40b394c"
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "dependencies": [
            "aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:vpc-endpoint/vpce-0f974d365f77c7f90",
            "dns_entry": [
              {
                "dns_name": "vpce-0f974d365f77c7f90-iz07q30j.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0f974d365f77c7f90-iz07q30j-eu-central-1b.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0f974d365f77c7f90-iz07q30j-eu-central-1c.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0f974d365f77c7f90-iz07q30j-eu-central-1a.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssmmessages.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z002000019E87N1D0GZUI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f974d365f77c7f90",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-010a84fd7042465d6",
              "eni-01a21fa7188878e73",
              "eni-05f5efdbe4fc795b8"
            ],
            "owner_id": "585008045756",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-028aeb160aa580052"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-0197df41affb2d92d",
              "subnet-03b10924d502d91b6",
              "subnet-0521f8466a40b394c"
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "dependencies": [
            "aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:vpc-endpoint/vpce-0e4137bde4c4079aa",
            "dns_entry": [
              {
                "dns_name": "vpce-0e4137bde4c4079aa-11ui2upw.sts.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0e4137bde4c4079aa-11ui2upw-eu-central-1b.sts.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0e4137bde4c4079aa-11ui2upw-eu-central-1a.sts.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0e4137bde4c4079aa-11ui2upw-eu-central-1c.sts.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "sts.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z034183421DTKOWNLL3EN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e4137bde4c4079aa",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-006385ab9798e65f6",
              "eni-011008d1f8304b498",
              "eni-06a7838758c8a2c21"
            ],
            "owner_id": "585008045756",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-028aeb160aa580052"
            ],
            "service_name": "com.amazonaws.eu-central-1.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-0197df41affb2d92d",
              "subnet-03b10924d502d91b6",
              "subnet-0521f8466a40b394c"
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "CAP"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "dependencies": [
            "aws_security_group.vpce"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "core_tenant",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-0c6a103c6fc5c6d90",
            "peer_vpc_id": "vpc-00fcae467a4f3d877",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "core-tenant-peering-prod",
              "Project": "CAP",
              "Side": "Requester"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "core-tenant-peering-prod",
              "Project": "CAP",
              "Side": "Requester"
            },
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "dependencies": [
            "data.aws_vpc.core",
            "data.aws_vpc.tenant"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-01ac87d4e210fbb61",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-01ac87d4e210fbb61",
            "name": "default",
            "tags": {
              "Environment": "prod",
              "Name": "agile-prod-vpc-default",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "data",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:585008045756:security-group/sg-004bc883b88f8e3df",
            "description": "Security group for Lambda functions",
            "filter": null,
            "id": "sg-004bc883b88f8e3df",
            "name": "lambda-prod-sg",
            "tags": {
              "Environment": "prod",
              "Name": "lambda-prod-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ceed96ed33eb80a"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}